fixed on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,8 +2,8 @@
   background-color: var(--surface-color-2);
   max-width: 900px;
   margin: auto;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100dvh;
+  max-height: 100dvh;
   display: flex;
   flex-direction: column;
   box-shadow: var(--common-box-shadow);
